[package]
name = "warp-websocket"
version = "0.1.0"
authors = ["matthewarrow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
crate = "0.0.2"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
tungstenite = {version = "0.14.0", features = ["rustls-tls"]}
url = "2.1.0"
